--- a/leetCode.html
+++ b/leetCode.html
@@ -348,17 +348,29 @@ var arr2BST = function(arr) {
     return root;
 };
 
+function Node(val,next,random) {
+   this.val = val;
+   this.next = next;
+   this.random = random;
+};
+
 /**
- * @param {number[]} nums
- * @return {number}
+ * @param {Node} head
+ * @return {Node}
  */
-var singleNumber = function(nums) {
-    nums.sort((a,b)=>a-b);
-    for(let i = 0; i<nums.length; i++) {
-        if(nums[i]!==nums[i-1] && nums[i]!==nums[i+1]) {
-            return nums[i];
-        }
+var copyRandomList = function(head, cache={}) {
+    if(!head) {
+        return null;
     }
+    if(cache[head.val]) {
+        return cache[head.val];
+    }
+    const node = new Node(head.val);
+    cache[head.val] = node;
+    node.next = copyRandomList(head.next, cache);
+    node.random = copyRandomList(head.random, cache);
+
+    return node;
 };
 
 assertCompare(()=>singleNumber([3,2,2,2]), 3);
