--- a/leetCode.html
+++ b/leetCode.html
@@ -355,72 +355,39 @@ function Node(val,next,random) {
 };
 
 /**
- * @param {number} capacity
+ * @param {ListNode} head
+ * @return {ListNode}
  */
-var LRUCache = function(capacity) {
-    this.cache = {};
-    this.capacity = capacity;
-    this.counter = 0;
-    this.currentCount = 0;
-};
-
-LRUCache.prototype._getCounter = function() {
-    return this.counter++;
-};
-
-LRUCache.prototype._checkCapacity = function() {
-    this.currentCount++;
-    if(this.currentCount>this.capacity) {
-        let minKey = -1;
-        let minCounter = Infinity;
-        for(let key in this.cache) {
-            if(this.cache[key]["counter"]<minCounter) {
-                minCounter = this.cache[key]["counter"];
-                minKey = key;
+var insertionSortList = function(head) {
+    const root = new ListNode(-Infinity);
+    root.next = head;
+    let cur = head;
+    while(cur && cur.next) {
+        if(cur.next.val<cur.val) {
+            let nextNode = cur.next.next;
+            let targetNode = cur.next;
+            targetNode.next = null;
+            cur.next = null;
+            let innerCur = root;
+            while(innerCur && innerCur.next) {
+                if(innerCur.val<=targetNode.val && targetNode.val<=innerCur.next.val) {
+                    let tmp = innerCur.next;
+                    innerCur.next = targetNode;
+                    targetNode.next = tmp;
+                    break;
+                }
+                innerCur = innerCur.next;
             }
+            cur.next = nextNode;
+        }else {
+            cur = cur.next;
         }
-        delete this.cache[minKey];
-        this.currentCount = this.capacity;
     }
+    
+    return root.next;
 };
 
-/** 
- * @param {number} key
- * @return {number}
- */
-LRUCache.prototype.get = function(key) {
-    const item = this.cache[key];
-    if(!item) {
-        return -1;
-    }
-    item["counter"] = this._getCounter();
-    return item["value"];
-};
-
-/** 
- * @param {number} key 
- * @param {number} value
- * @return {void}
- */
-LRUCache.prototype.put = function(key, value) {
-    const item = this.cache[key] || {};
-    item["value"] = value;
-    item["counter"] = this._getCounter();
-    this.cache[key] = item;
-    this._checkCapacity();
-};
-
-const cache = new LRUCache(2);
-cache.put(1, 1);
-cache.put(2, 2);
-console.log(cache.get(1));//1
-
-cache.put(3, 3);
-console.log(cache.get(2));//-1
-
-cache.put(4, 4); 
-console.log(cache.get(1));//-1
-console.log(cache.get(3));//3
-console.log(cache.get(4));//4
+assertCompare(()=>insertionSortList(makeLink([4,2,1,3])), makeLink([1,2,3,4]));
+assertCompare(()=>insertionSortList(makeLink([-1,5,3,4,0])), makeLink([-1,0,3,4,5]));
 </script>
 </body>
