--- a/leetCode.html
+++ b/leetCode.html
@@ -358,30 +358,22 @@ function Node(val,next,random) {
  * @param {number[]} nums
  * @return {number}
  */
-var maxProduct = function(nums) {
-    const min = [1];
-    const max = [1];
-    for(let i = 0; i<nums.length; i++) {
-        const num = nums[i];
-        if(num<0) {
-            min[i+1] = Math.min(max[i]*num, num);
-            max[i+1] = Math.max(min[i]*num, num);
-        }else {
-            min[i+1] = Math.min(min[i] * num, num);
-            max[i+1] = Math.max(max[i] * num, num)
+var findMin = function(nums) {
+    const _nums = [nums[nums.length-1], ...nums, nums[0]];
+    for(var i = 1; i<_nums.length-1; i++) {
+        if(_nums[i-1]>_nums[i] && _nums[i]<_nums[i+1]) {
+            break;
         }
     }
 
-    max[0] = -Infinity;
-    return Math.max(...max);
+    return Math.min(_nums[i-1], _nums[i]);
 };
 
-assertCompare(()=>maxProduct([2,3,-2,4]), 6);
-assertCompare(()=>maxProduct([-2,0,-1]), 0);
-assertCompare(()=>maxProduct([-2]), -2);
-assertCompare(()=>maxProduct([-2,0]), 0);
-assertCompare(()=>maxProduct([3,-1,4]), 4);
-assertCompare(()=>maxProduct([-2,3,-4]), 24);
-assertCompare(()=>maxProduct([-4,-3,-2]), 12);
+assertCompare(()=>findMin([3,4,5,1,2] ), 1);
+assertCompare(()=>findMin([4,5,6,7,0,1,2]), 0);
+assertCompare(()=>findMin([1]), 1);
+assertCompare(()=>findMin([3,2,1]), 1);
+assertCompare(()=>findMin([3,1,2]), 1);
+assertCompare(()=>findMin([1,2]), 1);
 </script>
 </body>
