--- a/leetCode.html
+++ b/leetCode.html
@@ -358,22 +358,24 @@ function Node(val,next,random) {
  * @param {number[]} nums
  * @return {number}
  */
-var findMin = function(nums) {
-    const _nums = [nums[nums.length-1], ...nums, nums[0]];
-    for(var i = 1; i<_nums.length-1; i++) {
-        if(_nums[i-1]>_nums[i] && _nums[i]<_nums[i+1]) {
+var findPeakElement = function(nums) {
+    for(var i = 1; i<nums.length-1; i++) {
+        if(nums[i-1]<nums[i] && nums[i]>nums[i+1]) {
             break;
         }
     }
-
-    return Math.min(_nums[i-1], _nums[i]);
+    if(i<nums.length-1) {
+        return i;
+    }else {
+        return nums[0]<nums[nums.length-1] ? nums.length-1 : 0;
+    }
 };
 
-assertCompare(()=>findMin([3,4,5,1,2] ), 1);
-assertCompare(()=>findMin([4,5,6,7,0,1,2]), 0);
-assertCompare(()=>findMin([1]), 1);
-assertCompare(()=>findMin([3,2,1]), 1);
-assertCompare(()=>findMin([3,1,2]), 1);
-assertCompare(()=>findMin([1,2]), 1);
+assertCompare(()=>findPeakElement([1,2,3,1]), 2);
+assertCompare(()=>findPeakElement([1,2,1,3,5,6,4]), 1);
+assertCompare(()=>findPeakElement([1]), 0);
+assertCompare(()=>findPeakElement([1,2]), 1);
+assertCompare(()=>findPeakElement([2,1]), 0);
+assertCompare(()=>findPeakElement([1,2,3]), 2);
 </script>
 </body>
