--- a/leetCode.html
+++ b/leetCode.html
@@ -354,28 +354,29 @@ function Node(val,next,random) {
    this.random = random;
 };
 
-/**
- * @param {number[]} nums
- * @return {number}
- */
-var findPeakElement = function(nums) {
-    for(var i = 1; i<nums.length-1; i++) {
-        if(nums[i-1]<nums[i] && nums[i]>nums[i+1]) {
-            break;
+var compareVersion = function(version1, version2) {
+    let v1s = version1.split(".").map(v=>parseInt(v));
+    let v2s = version2.split(".").map(v=>parseInt(v));
+    let maxLen = Math.max(v1s.length, v2s.length);
+    let pd0 = new Array(maxLen).fill(0);
+    v1s = v1s.concat(pd0).slice(0, maxLen);
+    v2s = v2s.concat(pd0).slice(0, maxLen);
+
+    for(let i = 0; i<maxLen; i++) {
+        if(v1s[i]>v2s[i]) {
+            return 1;
+        }else if(v1s[i]<v2s[i]) {
+            return -1;
         }
     }
-    if(i<nums.length-1) {
-        return i;
-    }else {
-        return nums[0]<nums[nums.length-1] ? nums.length-1 : 0;
-    }
+
+    return 0;
 };
 
-assertCompare(()=>findPeakElement([1,2,3,1]), 2);
-assertCompare(()=>findPeakElement([1,2,1,3,5,6,4]), 1);
-assertCompare(()=>findPeakElement([1]), 0);
-assertCompare(()=>findPeakElement([1,2]), 1);
-assertCompare(()=>findPeakElement([2,1]), 0);
-assertCompare(()=>findPeakElement([1,2,3]), 2);
+assertCompare(()=>compareVersion("0.1", "1.1"), -1);
+assertCompare(()=>compareVersion("1.0.1", "1"), 1);
+assertCompare(()=>compareVersion("7.5.2.4", "7.5.3"), -1);
+assertCompare(()=>compareVersion("1.01", "1.001"), 0);
+assertCompare(()=>compareVersion("1.0", "1.0.0"), 0);
 </script>
 </body>
