--- a/leetCode.html
+++ b/leetCode.html
@@ -354,29 +354,52 @@ function Node(val,next,random) {
    this.random = random;
 };
 
-var compareVersion = function(version1, version2) {
-    let v1s = version1.split(".").map(v=>parseInt(v));
-    let v2s = version2.split(".").map(v=>parseInt(v));
-    let maxLen = Math.max(v1s.length, v2s.length);
-    let pd0 = new Array(maxLen).fill(0);
-    v1s = v1s.concat(pd0).slice(0, maxLen);
-    v2s = v2s.concat(pd0).slice(0, maxLen);
-
-    for(let i = 0; i<maxLen; i++) {
-        if(v1s[i]>v2s[i]) {
-            return 1;
-        }else if(v1s[i]<v2s[i]) {
-            return -1;
-        }
+var fractionToDecimal = function(numerator, denominator) {
+    let intPart = numerator/denominator;
+    if(Math.floor(intPart)==Math.ceil(intPart)) {//整数
+        return ""+intPart;
     }
 
-    return 0;
+    const flag = intPart > 0 ? "" : "-";
+    numerator = Math.abs(numerator);
+    denominator = Math.abs(denominator);
+    intPart = Math.floor(numerator/denominator);
+    let left = numerator - intPart * denominator;
+    let decimalStr = "";
+    const cache = {};
+    while(true) {
+        if(left==0) {
+            break;
+        }
+
+        left *= 10;
+        if(left<denominator) {
+            decimalStr += "0";
+            continue;
+        }
+        
+        if(cache[left]===void 0) {
+            cache[left] = decimalStr.length;
+        }else {
+            let startPos = cache[left];
+            decimalStr = decimalStr.slice(0, startPos) + `(${decimalStr.slice(startPos)})`;
+            break;
+        }
+    
+        let cur = Math.floor(left/denominator);
+        left -= cur * denominator;
+        decimalStr += cur;
+    }
+
+    return `${flag}${intPart}.${decimalStr}`;
 };
 
-assertCompare(()=>compareVersion("0.1", "1.1"), -1);
-assertCompare(()=>compareVersion("1.0.1", "1"), 1);
-assertCompare(()=>compareVersion("7.5.2.4", "7.5.3"), -1);
-assertCompare(()=>compareVersion("1.01", "1.001"), 0);
-assertCompare(()=>compareVersion("1.0", "1.0.0"), 0);
+assertCompare(()=>fractionToDecimal(1, 2), "0.5");
+assertCompare(()=>fractionToDecimal(2, 1), "2");
+assertCompare(()=>fractionToDecimal(2, 3), "0.(6)");
+assertCompare(()=>fractionToDecimal(2, 7), "0.(285714)");
+assertCompare(()=>fractionToDecimal(1, 6), "0.1(6)");
+assertCompare(()=>fractionToDecimal(-50, 8), "-6.25");
+assertCompare(()=>fractionToDecimal(7, -12), "-0.58(3)");
 </script>
 </body>
