--- a/leetCode.html
+++ b/leetCode.html
@@ -365,26 +365,36 @@ function Node(val,next,random) {
 };
 
 /**
- * @param {string} s
- * @return {string[]}
+ * @param {TreeNode} root
+ * @return {number[]}
  */
-var findRepeatedDnaSequences = function(s) {
-    const cache = {};
+var rightSideView = function(root) {
     const result = [];
-    for(let i = 0, len = s.length-9; i<len; i++) {
-        const str = s.substr(i, 10);
-        cache[str] = (cache[str] || 0) + 1;
-        if(cache[str]==2) {
-            result.push(str);
+    let queue1 = [];//current level
+    let queue2 = [];//next level
+
+    root && queue1.push(root);
+    while(queue1.length) {
+        while(queue1.length) {
+            const node = queue1.shift();
+            node.left && queue2.push(node.left);
+            node.right && queue2.push(node.right);
+            if(!queue1.length) {
+                result.push(node.val);
+            }
         }
+        queue1 = queue2;
+        queue2 = [];
     }
 
     return result;
 };
 
 
-assertCompare(()=>findRepeatedDnaSequences("AA"), []);
-assertCompare(()=>findRepeatedDnaSequences("AAAAAAAAA"), []);
-assertCompare(()=>findRepeatedDnaSequences("AAAAACCCCCAAAAACCCCCCAAAAAGGGTTT"), ["AAAAACCCCC", "CCCCCAAAAA"]);
+assertCompare(()=>rightSideView(makeTree([1,2,3,null,5,null,4])), [1,3,4]);
+assertCompare(()=>rightSideView(makeTree([])), []);
+assertCompare(()=>rightSideView(makeTree([1])), [1]);
+assertCompare(()=>rightSideView(makeTree([1,2])), [1,2]);
+assertCompare(()=>rightSideView(makeTree([1,null,2])), [1,2]);
 </script>
 </body>
