--- a/leetCode.html
+++ b/leetCode.html
@@ -365,36 +365,63 @@ function Node(val,next,random) {
 };
 
 /**
- * @param {TreeNode} root
- * @return {number[]}
+ * @param {character[][]} grid
+ * @return {number}
  */
-var rightSideView = function(root) {
-    const result = [];
-    let queue1 = [];//current level
-    let queue2 = [];//next level
-
-    root && queue1.push(root);
-    while(queue1.length) {
-        while(queue1.length) {
-            const node = queue1.shift();
-            node.left && queue2.push(node.left);
-            node.right && queue2.push(node.right);
-            if(!queue1.length) {
-                result.push(node.val);
-            }
+var numIslands = function(grid) {
+    const tmp = (new Array(grid.length)).fill(0).map(v=>[]);
+    const helper = (i, j, color)=>{
+        tmp[i][j] = color;
+        if(i>0 && grid[i-1][j]==1 && !tmp[i-1][j]) {
+            helper(i-1, j, color);
         }
-        queue1 = queue2;
-        queue2 = [];
+        if(j<grid[0].length-1 && grid[i][j+1]==1 && !tmp[i][j+1]) {
+            helper(i, j+1, color);
+        }
+        if(i<grid.length-1 && grid[i+1][j]==1 && !tmp[i+1][j]) {
+            helper(i+1, j, color);
+        }
+        if(j>0 && grid[i][j-1]==1 && !tmp[i][j-1]) {
+            helper(i, j-1, color);
+        }
+    };
+    let color = 1;
+
+    for(let i = 0, iLen = grid.length; i<iLen; i++) {
+        for(let j = 0, jLen = grid[0].length; j<jLen; j++) {
+            if(grid[i][j]==0) {
+                continue;
+            }
+            let c = tmp[i][j] || color++;
+            helper(i, j, color);
+        }
     }
 
-    return result;
+    return color-1;
 };
 
 
-assertCompare(()=>rightSideView(makeTree([1,2,3,null,5,null,4])), [1,3,4]);
-assertCompare(()=>rightSideView(makeTree([])), []);
-assertCompare(()=>rightSideView(makeTree([1])), [1]);
-assertCompare(()=>rightSideView(makeTree([1,2])), [1,2]);
-assertCompare(()=>rightSideView(makeTree([1,null,2])), [1,2]);
+assertCompare(()=>numIslands([[1,1,1,1,0],
+[1,1,0,1,0],
+[1,1,0,0,0],
+[0,0,0,0,0]]), 1);
+assertCompare(()=>numIslands([
+    [1,1,1,1,1],
+    [1,1,1,1,1],
+    [1,1,1,1,1],
+    [1,1,1,1,1],
+    [1,1,1,1,1],
+    [1,1,1,1,1],
+    [1,1,1,1,1],
+    [1,1,1,1,1]]), 1);
+assertCompare(()=>numIslands([[1,1,0,0,0],
+[1,1,0,0,0],
+[0,0,1,0,0],
+[0,0,0,1,1]]), 3);
+assertCompare(()=>numIslands([[0]]), 0);
+assertCompare(()=>numIslands([[]]), 0);
+assertCompare(()=>numIslands([[1]]), 1);
+assertCompare(()=>numIslands([["1","1","1"],["0","1","0"],["1","1","1"]]), 1);
+
 </script>
 </body>
