--- a/leetCode.html
+++ b/leetCode.html
@@ -365,25 +365,28 @@ function Node(val,next,random) {
 };
 
 /**
- * @param {number} m
- * @param {number} n
- * @return {number}
+ * @param {number} numCourses
+ * @param {number[][]} prerequisites
+ * @return {boolean}
  */
-var rangeBitwiseAnd = function(m, n) {
-    let mask = parseInt(new Array(32).fill(1).join(""), 2);
-    while(m&mask != n&mask) {
-        mask = mask<<1;
+var canFinish = function(numCourses, prerequisites) {
+    const cache = {};
+    for(let [a, b] of prerequisites) {
+        const aArr = cache[a] || [];
+        const bArr = cache[b] || [];
+        if(bArr.indexOf(a)!== -1) {
+            return false;
+        }
+        aArr.push(b);
+        cache[a] = aArr;
     }
-    return m&mask;
+
+    return true;
 };
 
-assertCompare(()=>rangeBitwiseAnd(5,7), 4);
-assertCompare(()=>rangeBitwiseAnd(0,1), 0);
-assertCompare(()=>rangeBitwiseAnd(0,2147483647), 0);
-assertCompare(()=>rangeBitwiseAnd(1,2147483647), 0);
-assertCompare(()=>rangeBitwiseAnd(2,3), 2);
-assertCompare(()=>rangeBitwiseAnd(1,2), 0);
-assertCompare(()=>rangeBitwiseAnd(3,4), 0);
+assertCompare(()=>canFinish(2, [[1,0]]), true);
+assertCompare(()=>canFinish(2, [[1,0],[0,1]]), false);
+assertCompare(()=>canFinish(3, [[1,0],[0,2],[2,1]]), false);
 
 </script>
 </body>
