medium done in tokyo

--- a/leetCode.html
+++ b/leetCode.html
@@ -364,35 +364,53 @@ function Node(val,next,random) {
    this.random = random;
 };
 
-/**
- * @param {number} s
- * @param {number[]} nums
- * @return {number}
- */
-var minSubArrayLen = function(s, nums) {
-    let left = 0;
-    let right = 0;
-    let min = Infinity;
-    let sum = 0;
-    while(right<nums.length) {
-        sum += nums[right];
-        if(sum<s) {
-            right++;
-        }else if(sum>=s) {
-            min = Math.min(min, right-left+1);
-            sum -= nums[right];
-            sum -= nums[left];
-            left++;
-            right = Math.max(left, right);
+var findOrder = function(numCourses, prerequisites) {
+    const getMap = function(prerequisites) {//依赖b的数组
+        const map = {};
+        for(let prerequisity of prerequisites) {
+            const [a, b] = prerequisity;
+            map[b] = map[b] || [];
+            map[b].push(prerequisity);
+        }
+
+        return map;
+    };
+
+    const result = [];
+    while(true) {
+        const map = getMap(prerequisites);
+        let _prerequisites = [];
+        for(let b in map) {
+            _prerequisites = _prerequisites.concat(map[b].filter(([a, b])=>{
+                if(map[a]) {
+                    return true;
+                }else {
+                    if(result.indexOf(a)===-1) {
+                        result.unshift(a);
+                    }
+                    return false;
+                }
+            }));
+        }
+        if(!_prerequisites.length) {
+            break;
+        }else if(prerequisites.length==_prerequisites.length) {
+            return [];
+        }else {
+            prerequisites = _prerequisites;
         }
     }
 
-    return min===Infinity ? 0 : min;
+    for(let i = 0; i<numCourses; i++) {
+        if(result.indexOf(i)===-1) {
+            result.unshift(i);
+        }
+    }
+    return result;
 };
 
-assertCompare(()=>minSubArrayLen(7, [2,3,1,2,4,3]), 2);
-assertCompare(()=>minSubArrayLen(1000, [2,3,1,2,4,3]), 0);
-assertCompare(()=>minSubArrayLen(2, [2]), 1);
+assertCompare(()=>findOrder(2, [[1,0]]), [0,1]);
+assertCompare(()=>findOrder(4, [[1,0],[2,0],[3,1],[3,2]]), [0,2,1,3]);//[0,1,2,3]
 
 </script>
 </body>
