--- a/leetCode.html
+++ b/leetCode.html
@@ -364,77 +364,31 @@ function Node(val,next,random) {
    this.random = random;
 };
 
-var WordDictionary = function() {
-    this.root = {};
-};
 
-WordDictionary.prototype._traverse = function(word, cur=this.root) {
-    if(!word) {
-        return cur;
-    }
-    for(let i = 0, len = word.length; i<len; i++) {
-        ch = word[i];
-        if(!cur) {
-            break;
+var rob = function(nums) {
+    const subRob = function(nums) {
+        const arr1 = [0];//arr1[i]表示偷了当前家的最大值
+        const arr2 = [0];//arr2[i]表示没有偷当前家的最大值
+        for(let i = 0; i<nums.length; i++) {
+            arr1[i+1] = arr2[i] + nums[i];
+            arr2[i+1] = Math.max(arr1[i], arr2[i]);
         }
-
-        if(ch==".") {
-            for(let subKey in cur) {
-                if(subKey=="isWord") {
-                    continue;
-                }
-                const node = this._traverse(word.slice(i+1), cur[subKey]);
-                if(node) {
-                    return node;
-                }
-            }
-            return null;
-        }else {
-            cur = cur[ch];
-        }
+        return Math.max(arr1.pop(), arr2.pop());
+    };
+    
+    if(nums.length<2) {
+        return nums.reduce((a,b)=>a+b, 0);
+    }else {
+        return Math.max(subRob(nums.slice(1)), subRob(nums.slice(0, -1)));//首尾相连， 巧妙地分别求去掉首/尾两种情况的最大值
     }
-
-    return cur;
 };
 
-/**
- * Adds a word into the data structure. 
- * @param {string} word
- * @return {void}
- */
-WordDictionary.prototype.addWord = function(word) {
-    let cur = this.root;
-    for(let ch of word) {
-        cur[ch] = cur[ch] || {};
-        cur = cur[ch];
-    }
-    cur.isWord = true;
-};
-
-/**
- * Returns if the word is in the data structure. A word could contain the dot character '.' to represent any one letter. 
- * @param {string} word
- * @return {boolean}
- */
-WordDictionary.prototype.search = function(word) {
-    const node = this._traverse(word);
-    return !!node && !!node.isWord;
-};
-
-const dir = new WordDictionary();
-dir.addWord("bad")
-dir.addWord("dad")
-dir.addWord("mad")
-assertCompare(()=>dir.search("pad"), false);
-assertCompare(()=>dir.search("bad"), true);
-assertCompare(()=>dir.search(".ad"), true);
-assertCompare(()=>dir.search("b.."), true);
-
-const dir = new WordDictionary();
-dir.addWord("a")
-dir.addWord("ab")
-assertCompare(()=>dir.search("a"), true);
-assertCompare(()=>dir.search("a."), true);
+assertCompare(()=>rob([2,3,2]), 3);
+assertCompare(()=>rob([1,2,3,1]), 4);
+assertCompare(()=>rob([1]), 1);
+assertCompare(()=>rob([1,2]), 2);
+assertCompare(()=>rob([1,3,1,3,100]), 103);
+assertCompare(()=>rob([]), 0);
 
 </script>
 </body>
