--- a/leetCode.html
+++ b/leetCode.html
@@ -365,13 +365,30 @@ function Node(val,next,random) {
 };
 
 
-var findKthLargest = function(nums, k) {
-    nums.sort((a,b)=>b-a);
-    return nums[k-1];
+var combinationSum3 = function(k, n) {
+    const result = [];
+    const dfs = function(min, left, arr) {
+        if(left<0 || arr.length>k) {
+            return;
+        }
+        if(left==0 && arr.length==k) {
+            result.push([...arr]);
+        }
+        for(let i = min; i<10; i++) {
+            arr.push(i);
+            dfs(i+1, left-i, arr);
+            arr.pop();
+        }
+    };
+
+    dfs(1, n, []);
+    return result;
 };
 
-assertCompare(()=>findKthLargest([3,2,1,5,6,4], 2), 5);
-assertCompare(()=>findKthLargest([3,2,3,1,2,4,5,5,6], 4), 4);
+assertCompare(()=>combinationSum3(1, 7), [[7]]);
+assertCompare(()=>combinationSum3(1, 11), []);
+assertCompare(()=>combinationSum3(3, 7), [[1,2,4]]);
+assertCompare(()=>combinationSum3(3, 9), [[1,2,6], [1,3,5], [2,3,4]]);
 
 </script>
 </body>
