--- a/leetCode.html
+++ b/leetCode.html
@@ -365,36 +365,26 @@ function Node(val,next,random) {
 };
 
 
-var maximalSquare = function(matrix) {
-    if(!matrix || !matrix.length) {
-        return 0;
-    }
-    const dp = new Array(matrix.length).fill(0).map(v=>new Array(matrix[0].length));//表示以i,j为右下定点的最大正方形
-    let max = 0;
-    for(let i = 0; i<matrix.length; i++) {
-        for(let j = 0; j<matrix[0].length; j++) {
-            if(i==0 || j==0) {
-                dp[i][j] = matrix[i][j];
-            }else if(matrix[i][j]==1){
-                dp[i][j] = Math.min(dp[i-1][j-1], dp[i-1][j], dp[i][j-1]) + 1;
-            }else {
-                dp[i][j] = 0;
-            }
-            max = Math.max(max, dp[i][j]);
+var countNodes = function(root) {
+    let count = 0;;
+    let queue = root ? [root] : [];
+    while(queue.length) {
+        let node = queue.shift();
+        count++;
+        if(node.left) {
+            queue.push(node.left);
+        }
+        if(node.right) {
+            queue.push(node.right);
         }
     }
 
-    return max*max;
+    return count;
 };
 
 
-assertCompare(()=>maximalSquare([]), 0);
-assertCompare(()=>maximalSquare([[1]]), 1);
-assertCompare(()=>maximalSquare([[0]]), 0);
-assertCompare(()=>maximalSquare([[1, 0, 1, 0, 0],
-[1, 0, 1, 1, 1],
-[1, 1, 1, 1, 1],
-[1, 0, 0, 1, 0]]), 4);
+assertCompare(()=>countNodes(makeTree([])), 0);
+assertCompare(()=>countNodes(makeTree([1,2,3,4,5,6])), 6);
 
 </script>
 </body>
